--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .navbar {
     display: block;
     margin-top: 0 !important;
@@ -280,6 +279,61 @@
     background-image: url(./lastone.PNG);
     color: transparent;
 }
+
+.pokemonAPI{
+    width: 300px;
+    height: 400px;
+    margin: 10px;
+    border: transparent;
+    background-size: cover;
+    background-position: center center;
+    background-image: url(./pokeball.png);
+    box-shadow: 2px 2px 4px black;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.pokemonAPI:hover {
+    background-image: url(./pokeGenerator.PNG);
+    color: transparent;
+}
+
+.kastStaticLayout{
+    width: 300px;
+    height: 400px;
+    margin: 10px;
+    border: transparent;
+    background-size: cover;
+    background-position: center center;
+    background-image: url(./graphPaper.PNG);
+    box-shadow: 2px 2px 4px black;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.kastStaticLayout:hover {
+    background-image: url(./kastLayout.PNG);
+    color: transparent;
+}
+
+.nasaAPI{
+    width: 300px;
+    height: 400px;
+    margin: 10px;
+    border: transparent;
+    background-size: cover;
+    background-position: center center;
+    background-image: url(./rocket.PNG);
+    box-shadow: 2px 2px 4px black;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.nasaAPI:hover {
+    background-image: url(./nasa.PNG);
+    color: transparent;
+}
+
 
 /* END PORTFOLIO */
 
